kubernetes/02-apps/overseerr/ingress.yaml
# kubernetes/02-apps/overseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-ingress
  namespace: homelab
  labels:
    app.kubernetes.io/name: overseerr
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # Opcional: para forzar HTTPS
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: requests.homelab.local # Elige el nombre de host que prefieras
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr # Nombre del Service
                port:
                  name: http # Nombre del puerto en el Service
